# autopep

./: .gitignore  AlphaFold2.ipynb  NOTES.md  README.md  comp_bio_spinner_words.txt
.codex/environments/: environment.toml
.github/workflows/: ci-evals.yml  live-science-canaries.yml
autopep/: .env.example  README.md  drizzle.config.ts  next.config.js  package.json  vitest.config.ts
autopep/drizzle/: 0001_agent_orchestration.sql  0001_famous_nightshade.sql  0002_unique_wendigo.sql  0003_smooth_sasquatch.sql  0004_smoke_task_kinds.sql  0005_public_black_crow.sql  0006_sleepy_wildside.sql  0007_nebulous_ultragirl.sql
autopep/modal/: autopep_worker.py  requirements.txt
autopep2/: .env.example  .gitignore  README.md  main.py  pyproject.toml  tree.py  warm_start_sanity.py
docs/: agent-orchestration.md
julia/: .env.example  .vercelignore  README.md  drizzle.config.ts  package.json  tsconfig.json
julia/worker/: .gitignore  modal_app.py  pyproject.toml
julia/worker/julia_agent/: __init__.py  agent.py  artifacts.py  config.py  db.py  events.py  live_runner.py  main.py  pubsub.py  storage.py  tools.py  tools_registry.py
julia/worker/tests/: test_agent.py  test_artifacts.py  test_config.py  test_dry_run.py  test_events.py  test_live_runner.py  test_signing.py  test_target_input_normalization.py  test_tools_paths.py
tools/: tools_readme.md
tools/structure_vis/: README.md  compare_proteins.py  pyproject.toml
tools/structure_vis/structure_vis/: __init__.py  cli.py  html_viewer.py  pipeline.py  pymol_script.py
tools/structure_vis/tests/: test_cli.py
(+271 files in other folders)
