[project]
name = "julia-worker"
version = "0.1.0"
description = "Julia Python worker scaffold"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "fastapi",
    "httpx",
    "modal",
    "openai-agents>=0.7.0",
    "psycopg[binary]",
    "python-dotenv",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["julia_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
